# ann_reaction

./: .#ann_learning.py  .#evaluate_model_full.py  .ann_learning.py.swp  .gitignore  1d_learning.py  TPU_lstm_learninig.py  ann_learning.py  collect_data.py  data_analysis.py  evalate_flow.py  evaluate_error.py  evaluate_lstm.py  evaluate_model.py  evaluate_model_full.py  freeze_graph.py  freeze_graph_1.py  log  lstm_learning.py  ode_learning.py  omegai.csv  scipy_learning.py
Docker/: Docker-keras.json  Dockerfile  build_docker.sh  install_docker.sh  run_docker.sh
backup/: ann_learning.py  evaluate_model.py
backup/modify/: ann_learning.py  collect_data.py  data_analysis.py  evaluate_model.py
c/: hello_tf
cpp/: 1dsteady.f90  CMakeLists.txt  ann_integrator.cpp  ann_integrator.hpp  compile.sh  main.cpp  main.hpp  mod_1dsteady.f90  predict.cpp  realarray-c.cpp  tf_utils.cpp
cpp/resource/: frozen_graph.pb  mean.csv  readcsv.cpp  stanford_model.pb  stanford_model.pb_param.json  statistics.csv  std.csv
cpp/sub/: common.cpp  common.h  predict.cpp
learned_model/: O_model.json  O_weight.hdf5  stanford_model.h5  stanford_model.json  stanford_weight.hdf5  temp_model.json  temp_weight.hdf5
learned_model/model_for_c++/: graph.pb  model.ckpt.data-00000-of-00001  model.ckpt.index  stanford_model.pb_param.json
learned_model/weight_history/: stanford_weights_01_4.66E-01_1.45E-01.hdf5  stanford_weights_01_5.02E-01_1.85E-01.hdf5  stanford_weights_01_5.74e+01_4.19e+01.hdf5  stanford_weights_01_7.15E-02_1.11E-03.hdf5  stanford_weights_01_7.86e+01_5.25e+01.hdf5  stanford_weights_02_5.45E-02_1.49E-02.hdf5  stanford_weights_02_5.60e+01_4.08e+01.hdf5  stanford_weights_02_5.64E-04_3.16E-04.hdf5  stanford_weights_02_7.34e+01_4.85e+01.hdf5  stanford_weights_02_7.70E-02_1.98E-02.hdf5  stanford_weights_03_1.21E-02_6.04E-03.hdf5  stanford_weights_03_1.68E-04_1.24E-04.hdf5  (+1194 more)
learning_data/: data_length.npy  temp_1e-05.csv  temp_1e-06.csv  temp_1e-07.csv  temp_1e-08.csv  temp_1e-09.csv  temp_2e-08.csv  temp_3e-05.csv  train_x.npy  train_y.npy
legacy/: ann_learning_10_07.py  collect_data_10_07.py
logs/: events.out.tfevents.1572943575.8ee220760af3
output/: answer.csv  error.csv  eval.csv  time_hist.csv  x.csv  y.csv
reaction/: Makefile  imtss.f90  imtss_omega.f90  imtss_omega_para.f90  imtss_omega_single.f90  make_constant.f90  make_properties.f90  mod_globals.f90  mod_globals.mod  mod_parameter.f90  pointimplicit.f90  species_sub.f90
ref/: EOM.py
tools/: .#matlibplot.py  matlibplot.py
(+1156 files in other folders)
